# libpsys

./: .gitignore  AUTHORS  HACKING  HACKING.md  Makefile.am  NEWS  README  README.md  configure.ac
examples/helloworld/: Makefile  installer.c  uninstaller.c  updater.c
examples/helloworld-gui/: Makefile  example.com-helloworld-gui.desktop  helloworld-gui.c  helloworld-gui2.c  installer.c  uninstaller.c  updater.c
fallback/: Makefile.am  fallback.c  fallback_dpkg.c  fallback_private.h  fallback_rpm.c
lib/: Makefile.am  psys.c  psys.h  psys_impl.c  psys_impl.h  psys_private.h
man/: Makefile.am  gen_markdown.sh  man2markdown.py  psys.7  psys_announce.3  psys_announce_update.3  psys_err.3  psys_err_msg.3  psys_pkg_add_description.3  psys_pkg_add_extra.3  psys_pkg_add_summary.3  psys_pkg_arch.3  psys_pkg_description.3  psys_pkg_dir.3  psys_pkg_extras.3  psys_pkg_free.3  psys_pkg_lsbversion.3  psys_pkg_name.3  psys_pkg_new.3  psys_pkg_summary.3  psys_pkg_vendor.3  psys_pkg_version.3  psys_register.3  psys_register_update.3  psys_tlist.3  psys_tlist_locale.3  psys_unannounce.3  psys_unregister.3  psysmeta.7
