man_MANS = \
	psys.7 \
	psysmeta.7 \
	psys_announce.3 \
	psys_announce_update.3 \
	psys_err.3 \
	psys_err_code.3 \
	psys_err_msg.3 \
	psys_pkg_add_description.3 \
	psys_pkg_add_summary.3 \
	psys_pkg_arch.3 \
	psys_pkg_description.3 \
	psys_pkg_dir.3 \
	psys_pkg_free.3 \
	psys_pkg_lsbversion.3 \
	psys_pkg_name.3 \
	psys_pkg_new.3 \
	psys_pkg_summary.3 \
	psys_pkg_vendor.3 \
	psys_pkg_version.3 \
	psys_register.3 \
	psys_register_update.3 \
	psys_tlist.3 \
	psys_tlist_locale.3 \
	psys_tlist_next.3 \
	psys_tlist_value.3 \
	psys_unannounce.3 \
	psys_unregister.3
